comments/lista02_20241023203435.txt
g++ (Debian 12.2.0-14) 12.2.0
Copyright (C) 2022 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

ex4.cpp: In function ‘int main()’:
ex4.cpp:66:20: error: no matching function for call to ‘Polinomio2::Polinomio2(int)’
   66 |     Polinomio2 p1(1);
      |                    ^
ex4.cpp:27:5: note: candidate: ‘Polinomio2::Polinomio2()’
   27 |     Polinomio2()
      |     ^~~~~~~~~~
ex4.cpp:27:5: note:   candidate expects 0 arguments, 1 provided
ex4.cpp:12:5: note: candidate: ‘Polinomio2::Polinomio2(int, int, int)’
   12 |     Polinomio2(int a, int b, int c)
      |     ^~~~~~~~~~
ex4.cpp:12:5: note:   candidate expects 3 arguments, 1 provided
ex4.cpp:6:7: note: candidate: ‘constexpr Polinomio2::Polinomio2(const Polinomio2&)’
    6 | class Polinomio2
      |       ^~~~~~~~~~
ex4.cpp:6:7: note:   no known conversion for argument 1 from ‘int’ to ‘const Polinomio2&’
ex4.cpp:6:7: note: candidate: ‘constexpr Polinomio2::Polinomio2(Polinomio2&&)’
ex4.cpp:6:7: note:   no known conversion for argument 1 from ‘int’ to ‘Polinomio2&&’
ex4.cpp:71:22: error: no matching function for call to ‘Polinomio2::Polinomio2(int, int)’
   71 |     Polinomio2 p2(1,1);
      |                      ^
ex4.cpp:27:5: note: candidate: ‘Polinomio2::Polinomio2()’
   27 |     Polinomio2()
      |     ^~~~~~~~~~
ex4.cpp:27:5: note:   candidate expects 0 arguments, 2 provided
ex4.cpp:12:5: note: candidate: ‘Polinomio2::Polinomio2(int, int, int)’
   12 |     Polinomio2(int a, int b, int c)
      |     ^~~~~~~~~~
ex4.cpp:12:5: note:   candidate expects 3 arguments, 2 provided
ex4.cpp:6:7: note: candidate: ‘constexpr Polinomio2::Polinomio2(const Polinomio2&)’
    6 | class Polinomio2
      |       ^~~~~~~~~~
ex4.cpp:6:7: note:   candidate expects 1 argument, 2 provided
ex4.cpp:6:7: note: candidate: ‘constexpr Polinomio2::Polinomio2(Polinomio2&&)’
ex4.cpp:6:7: note:   candidate expects 1 argument, 2 provided
Versão do G++:
Varificando data de envio...
AGORA: 2024-10-23 17:35:26.062472-03:00
PRAZO MÁXIMO: 2024-11-06 23:59:59-03:06
Testando sua solucao...
Procurando exercício 1...
Exercício 1...
Compilando...
g++ -O2 -Wno-unused-result  "ex1.cpp" 
Teste 1: correto! +0.050
Teste 2: correto! +0.050
Teste 3: correto! +0.050
Teste 4: correto! +0.050
Teste 5: correto! +0.050
Teste 6: correto! +0.050
Teste 7: correto! +0.050
Teste 8: correto! +0.050
Teste 9: correto! +0.050
Teste 10: correto! +0.050
Teste 11: correto! +0.050
Teste 12: correto! +0.050
Teste 13: correto! +0.050
Teste 14: correto! +0.050
Teste 15: correto! +0.050
Teste 16: correto! +0.050
Teste 17: correto! +0.050
Teste 18: correto! +0.050
Teste 19: correto! +0.050
Teste 20: correto! +0.050
Nota exercicio 1: 1.0
Procurando exercício 2...
Exercício 2...
Compilando...
g++ -O2 -Wno-unused-result  "ex2.cpp" 
Teste 1: correto! +0.050
Teste 2: correto! +0.050
Teste 3: correto! +0.050
Teste 4 deu errado! +0.044
O resultado para
#include<iostream>
int main() {
    Fracao f(99LL, 84LL);
    f = f - Fracao(-86LL, 80LL);
    f = f * Fracao(-55LL, 34LL);
    f = f / Fracao(51LL, 45LL);
    f = f - Fracao(-55LL, 19LL);
    f = f + Fracao(92LL, 96LL);
    std::cout << f << " " << double(f) << std::endl;
    f = f + Fracao(12LL, 99LL);
    f = f - Fracao(43LL, 65LL);
    f = f * Fracao(-16LL, 70LL);
    std::cout << f << " " << double(f) << std::endl;
    f = f + Fracao(-73LL, 50LL);
    std::cout << f << " " << double(f) << std::endl;
    f = f / Fracao(42LL, 37LL);
    std::cout << f << " " << double(f) << std::endl;
    f = f * Fracao(-54LL, 63LL);
    f = f / Fracao(-10LL, 72LL);
    f = f * Fracao(-98LL, 45LL);
    f = f + Fracao(69LL, 70LL);
    std::cout << f << " " << double(f) << std::endl;
    f = f + Fracao(-90LL, 77LL);
    f = f / Fracao(-98LL, 17LL);
    f = f + Fracao(98LL, 8LL);
    std::cout << f << " " << double(f) << std::endl;
    f = f * Fracao(21LL, 5LL);
    f = f - Fracao(8LL, 33LL);
    f = f * Fracao(-35LL, 77LL);
    std::cout << f << " " << double(f) << std::endl;
    f = f / Fracao(-64LL, 30LL);
    f = f + Fracao(-48LL, 56LL);
    std::cout << f << " " << double(f) << std::endl;
    f = f / Fracao(-26LL, 88LL);
    f = f + Fracao(-89LL, 13LL);
    f = f - Fracao(-12LL, 66LL);
    f = f + Fracao(57LL, 40LL);
    f = f * Fracao(85LL, 8LL);
    std::cout << f << " " << double(f) << std::endl;
    f = f + Fracao(-7LL, 37LL);
    std::cout << f << " " << double(f) << std::endl;
    f = f + Fracao(10LL, 33LL);
    f = f - Fracao(7LL, 44LL);
    std::cout << f << " " << double(f) << std::endl;
    f = f / Fracao(6LL, 40LL);
    f = f + Fracao(14LL, 56LL);
    std::cout << f << " " << double(f) << std::endl;
    f = f + Fracao(-28LL, 36LL);
    f = f * Fracao(19LL, 32LL);
    f = f - Fracao(-74LL, 27LL);
    f = f * Fracao(13LL, 86LL);
    std::cout << f << " " << double(f) << std::endl;
    f = f - Fracao(-10LL, 98LL);
    std::cout << f << " " << double(f) << std::endl;
    f = f - Fracao(24LL, 91LL);
    f = f + Fracao(66LL, 39LL);
    f = f - Fracao(98LL, 64LL);
    f = f / Fracao(-54LL, 81LL);
    std::cout << f << " " << double(f) << std::endl;
    f = f / Fracao(-68LL, 21LL);
    f = f - Fracao(3LL, 44LL);
    f = f / Fracao(23LL, 64LL);
    f = f + Fracao(47LL, 58LL);
    f = f - Fracao(-89LL, 39LL);
    std::cout << f << " " << double(f) << std::endl;
    f = f - Fracao(27LL, 15LL);
    return 0;
}
deveria ser
1174267/1844976 0.6364673578409692
-42275059/1923771850 -0.02197508971762946
-285098196/192377185 -1.4819750897176294
-1758105542/1346640295 -1.3055494837988642
178259579007/9618859250 18.53229934797102
256122225559/27724947250 9.237969805659414
-2290697460031/130703322750 -17.525931336975134
2051697098431/278833755200 7.358137457064237
-2483327718761/7753665920 -320.2778846010688
-91937401255597/286885639040 -320.467073790258
-275688321331751/860656917120 -320.3231343963186
-275656046697359/129098537568 -2135.237562642124
-825481619504525/4315131684864 -191.29928813065683
-825041299944845/4315131684864 -191.1972473143303
825484371501773/2876754456576 286.9498888286383
-2150659070978251/8825627376384 -243.68342093538627

mas deu
1174267/1844976 0.636467
-42275059/1923771850 -0.0219751
-285098196/192377185 -1.48198
-1758105542/1346640295 -1.30555
178259579007/9618859250 18.5323
256122225559/27724947250 9.23797
-2290697460031/130703322750 -17.5259
2051697098431/278833755200 7.35814
-2483327718761/7753665920 -320.278
-91937401255597/286885639040 -320.467
-275688321331751/860656917120 -320.323
-275656046697359/129098537568 -2135.24
-1341407631694853/7012088987904 -191.299
-65693913508108277/343592360407296 -191.197
353411548838487982/7258388613604128 48.6901
-24808536423661874/637122283654857 -38.9384

Teste 5: correto! +0.050
Teste 6: correto! +0.050
Teste 7: correto! +0.050
Teste 8: correto! +0.050
Teste 9: correto! +0.050
Teste 10: correto! +0.050
Teste 11: correto! +0.050
Teste 12: correto! +0.050
Teste 13: correto! +0.050
Teste 14: correto! +0.050
Teste 15: correto! +0.050
Teste 16: correto! +0.050
Teste 17: correto! +0.050
Teste 18: correto! +0.050
Teste 19: correto! +0.050
Teste 20: correto! +0.050
Nota exercicio 2: 1.0
Procurando exercício 3...
Exercício 3...
Compilando...
g++ -O2 -Wno-unused-result  "ex3.cpp" 
Teste 1: correto! +0.050
Teste 2: correto! +0.050
Teste 3: correto! +0.050
Teste 4: correto! +0.050
Teste 5: correto! +0.050
Teste 6: correto! +0.050
Teste 7: correto! +0.050
Teste 8: correto! +0.050
Teste 9: correto! +0.050
Teste 10: correto! +0.050
Teste 11: correto! +0.050
Teste 12: correto! +0.050
Teste 13: correto! +0.050
Teste 14: correto! +0.050
Teste 15: correto! +0.050
Teste 16: correto! +0.050
Teste 17: correto! +0.050
Teste 18: correto! +0.050
Teste 19: correto! +0.050
Teste 20: correto! +0.050
Nota exercicio 3: 1.0
Procurando exercício 4...
Exercício 4...
Compilando...
g++ -O2 -Wno-unused-result  "ex4.cpp" 
Teste 1: correto! +0.050
Teste 2: correto! +0.050
Teste 3: correto! +0.050
Teste 4: correto! +0.050
Teste 5: correto! +0.050
Teste 6: correto! +0.050
Teste 7: correto! +0.050
Teste 8: correto! +0.050
Teste 9: correto! +0.050
Teste 10: correto! +0.050
ERRO: Erro de Compilação
Nota exercicio 4: 0.0
Nota exercicio 4: 0.0
Procurando exercício 5...
Procurando exercício 6...
Procurando exercício 7...
Procurando exercício 8...
Nota total: 3.00
{"scores": {"ex1": 1.0, "ex2": 1.0, "ex3": 1.0, "ex4": 0.0, "ex5": 0.0, "ex6": 0.0, "ex7": 0.0, "ex8": 0.0}}
